--- a/formationAlkas/guillaume/php/symfony/templates/banniere.html.twig
+++ b/formationAlkas/guillaume/php/symfony/templates/banniere.html.twig
@@ -43,6 +43,14 @@
                         <a class="dropdown-item" href="/exo/todo">To do list</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Projet Chemise</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="/chemise/new">New</a>
+                        <a class="dropdown-item" href="/marque/chemise/">Liste des marques</a>
+                        <a class="dropdown-item" href="/chemise/">Liste des chemises</a>
+                    </div>
+                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
                 {% if is_granted('ROLE_USER') %}
