commit avant eval

--- a/formationAlkas/guillaume/php/symfony/templates/banniereaxentix.html.twig
+++ b/formationAlkas/guillaume/php/symfony/templates/banniereaxentix.html.twig
@@ -1,6 +1,6 @@
 <header role="banner">
 
-    <nav class="navbar shadow-1 primary" aria-label="example navbar">
+    <nav class="navbar shadow-1 airforce dark-2" aria-label="example navbar">
         <a href="#" class="navbar-logo hide-sm-down">
             <img src="https://useaxentix.com/img/axentix.svg" class="py-3" alt="Axentix">
         </a>
@@ -18,6 +18,16 @@
                 </div>
             </div>
 
+            <div class="dropdown" id="message-dropdown" data-ax="dropdown">
+                <div class="navbar-link active" data-target="message-dropdown">
+                    Projet Message
+                </div>
+                <div class="dropdown-content dropdown-left white shadow-1">
+                    <a class="dropdown-item" href="/message/new/">Crée un message</a>
+                    <a class="dropdown-item" href="/message/">Liste des messages</a>
+                    <a class="dropdown-item" href="/conversation/">Liste des conversations</a>
+                </div>
+            </div>
 
             <div class="dropdown" id="chemise-dropdown" data-ax="dropdown">
                 <div class="navbar-link active" data-target="chemise-dropdown">
