--- a/formationAlkas/guillaume/php/symfony/templates/chemise/show.html.twig
+++ b/formationAlkas/guillaume/php/symfony/templates/chemise/show.html.twig
@@ -23,6 +23,10 @@
                 <th>Couleur</th>
                 <td>{{ chemise.couleur }}</td>
             </tr>
+{#            <tr>#}
+{#                <th>Marque</th>#}
+{#                <td>{{ marque_chemise.nom }}</td>#}
+{#            </tr>#}
         </tbody>
     </table>
 
@@ -31,4 +35,5 @@
     <a href="{{ path('app_chemise_edit', {'id': chemise.id}) }}">edit</a>
 
     {{ include('chemise/_delete_form.html.twig') }}
+
 {% endblock %}
