--- a/formationAlkas/guillaume/php/symfony/templates/banniereaxentix.html.twig
+++ b/formationAlkas/guillaume/php/symfony/templates/banniereaxentix.html.twig
@@ -51,6 +51,18 @@
                 </div>
             </div>
 
+            <div class="dropdown" id="react-dropdown" data-ax="dropdown">
+                <div class="navbar-link active" data-target="react-dropdown">
+                    React
+                </div>
+                <div class="dropdown-content dropdown-left white shadow-1">
+                    <a class="dropdown-item" href="/react/babel">babel</a>
+                    <a class="dropdown-item" href="/react/composantJSX">composantJSX</a>
+                    <a class="dropdown-item" href="/react/exoComposantJSX">exercice composantJSX</a>
+
+                </div>
+            </div>
+
             <div class="dropdown" id="voiture-dropdown" data-ax="dropdown">
                 <div class="navbar-link active" data-target="voiture-dropdown">
                     Projet Voiture
