--- a/formationAlkas/guillaume/php/symfony/templates/base.html.twig
+++ b/formationAlkas/guillaume/php/symfony/templates/base.html.twig
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
 
-    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+{#    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">#}
+{#    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>#}
 
     <!-- Axentix CSS minified version -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@2.2.1/dist/axentix.min.css">
     <!-- Axentix JS minified version -->
     <script src="https://cdn.jsdelivr.net/npm/axentix@2.2.1/dist/axentix.min.js"></script>
-    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+     Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
